fixed top padding on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -618,7 +618,4 @@ h5, h6          { font-weight: bolder }
      .main .work{
         width: 100%;
     }
-    .top {
-        height: 275px;
-    }
 }
